Fixed contrast issues.

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -1,7 +1,7 @@
 /* #region Base */
 :root {
     --primary-color: #005580;
-    --secondary-color: #50783A;
+    --secondary-color: #3D5B2C;
     --accent1-color: yellow;
     --accent2-color: #999999;
     --accent3-color: #33334d;
